--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^154.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
@@ -25,7 +28,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "sonner": "^2.0.6",
-    "tailwind": "^4.0.0",
+    "tailwind": "^2.3.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^4.0.0"
