feat: perfil robusto, valoraciones, policies y mejoras UX
- Implementa perfil de usuario con tabs: datos, cupones, compras y valoraciones
- Lógica real de compras y productos por usuario (orders + order_items)
- Valoración de sabores: evitar duplicados, feedback visual, edición y eliminación
- Policies seguras en Supabase para todas las tablas sensibles
- Mejoras de UX/UI: feedback inmediato, botones deshabilitados, modales accesibles
- Código limpio, sin warnings ni errores de compilación
- (Pendiente) Lógica real de cupones en /profile y /checkout

--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.56.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^6.1.0",
+    "csv-stringify": "^6.6.0",
+    "framer-motion": "^12.23.12",
     "googleapis": "^154.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
@@ -27,15 +35,19 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.6",
     "tailwind": "^2.3.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/csv-parse": "^1.1.12",
+    "@types/csv-stringify": "^1.4.3",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
