--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "googleapis": "^154.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
-    "next": "15.4.2",
+    "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
