--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "googleapis": "^154.1.0",
     "leaflet": "^1.9.4",
